Dynamically bootstrap the angular js app (fix potential display issue on iOS 11)

--- a/scss/cesium.app.scss
+++ b/scss/cesium.app.scss
@@ -409,6 +409,13 @@ $screen-menu:                     845px;
 /**********
    Fix or extend generic CSS
 **********/
+html, body {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
 
 .item.item-icon-right.item-select,
 .item.item-icon-right .item-select {
@@ -1675,7 +1682,7 @@ $ionicon-var-badge-editable: $ionicon-var-edit + "\00a0";
     padding-right: 0px !important;
 
     .platform-ios.platform-cordova & {
-      height: calc(env(safe-area-inset-top) + 160px);
+      height: calc(env(safe-area-inset-top) + 180px);
     }
 
     .hero {
@@ -1696,7 +1703,7 @@ $ionicon-var-badge-editable: $ionicon-var-edit + "\00a0";
     top: 150px;
 
     .platform-ios.platform-cordova & {
-      top: calc(env(safe-area-inset-top) + 160px);
+      top: calc(env(safe-area-inset-top) + 180px);
     }
   }
 }
